# windyble

./: .gitignore  Cargo.toml  build_thing.sh  hive.toml  log4rs.yaml  windyble.init  windyble.service
examples/: work.rs
src/: main.rs  mock_gpio.rs  motor.rs  my_pin.rs
