[package]
name = "board"
version = "0.1.0"
authors = ["Enoch <mrenoch@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sysfs_gpio = "0.5"
futures = "0.3.5"
hive = { git = 'https://github.com/enochc/hive', branch = 'new_master' , version = "0.1.300"}
async-std = "1.6.2"
local_ipaddress = "0.1.3"
# LOCAL_IPADDRESS 0.1.3
#runtime = "0.3.0-alpha.8"

# testing
async-mutex = "1.1.5"
smol = "0.3.3"