[package]
name = "windyble"
version = "0.1.0"
authors = ["Enoch <mrenoch@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sysfs_gpio = {version="0.5"}
futures = "0.3.5"
hive = { git = 'https://github.com/enochc/hive', branch = 'new_master' , version = "0.1.402"}
async-std = "1.6.2"
local_ipaddress = "0.1.3"
log = "0.4.11"
log4rs = {version="0.13", features = ["rolling_file_appender", "compound_policy"]}
simple-signal = "1.1.1"
# bluetooth
# btleplug = "0.5.1"

[target.'cfg(target_arch = "arm")'.dependencies]
rppal = "0.11"

# testing
async-mutex = "1.1.5"
smol = "0.3.3"